--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/L_Test.L_Test
-EditorStartupMap=/Game/Maps/L_Test.L_Test
+GameDefaultMap=/Game/Maps/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/Maps/L_MainMenu.L_MainMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
